--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Just Java</string>
+    <string name="display_price">Total: %1sd \nThank You!</string>
+    <string name="quantity">Quantity</string>
+    <string name="plus">+</string>
+    <string name="minus">-</string>
+    <string name="price">Price</string>
+    <string name="order">Order</string>
 </resources>
