--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="quantity">Quantity</string>
     <string name="plus">+</string>
     <string name="minus">-</string>
-    <string name="price">Price</string>
+    <string name="order_summary">Order summary:</string>
     <string name="order">Order</string>
+    <string name="chck_whipped">Whipped Cream</string>
+    <string name="toppings">Toppings</string>
 </resources>
