--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="order">Order</string>
     <string name="chck_whipped">Whipped Cream</string>
     <string name="toppings">Toppings</string>
+    <string name="chocolate">Chocolate</string>
 </resources>
