--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">Just Java</string>
+    <string name="app_name" translatable="false">Just Java</string>
     <string name="display_price">Total: %1sd \nThank You!</string>
     <string name="quantity">Quantity</string>
-    <string name="plus">+</string>
-    <string name="minus">-</string>
+    <string name="plus" translatable="false">+</string>
+    <string name="minus" translatable="false">-</string>
     <string name="order_summary">Order summary:</string>
     <string name="order">Order</string>
     <string name="chck_whipped">Whipped Cream</string>
@@ -12,4 +12,10 @@
     <string name="message_below_one">You cannot have less than 1 coffe!</string>
     <string name="message_above_hundred">You cannot have more than 100 coffes!</string>
     <string name="message_email_subject">JustJava order for</string>
+    <string name="end_mess_name">Name:</string>
+    <string name="end_mess_whipped">Add whipped cream?:</string>
+    <string name="end_mess_choco">Add chocolate?:</string>
+    <string name="end_mess_quantity">Quantity:</string>
+    <string name="end_mess_total">Total:</string>
+    <string name="end_mess_thankx">Thank you!</string>
 </resources>
